Fixed overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,8 @@
   max-width: 100vw;
   width: 100%;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 0;
   text-align: center;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
